htdocs/theme/views.css
/* ... */
.artefactlicense {
    margin: 20px 0 10px 0;
}
/* More link */
.morelink {
    font-weight: bold;
}
.morelinkwrap {
    padding: 5px;
    text-align: right;
}
/* My friends / Members block */
.friendcell {
    display: inline-block;
    width: 100px;
    height: 90px;
    padding: 2px;
    overflow-y: hidden;
}
.friendcell a {
    height: 60px;
    display: block;
}
.membername {
    font-size: 0.917em;
    line-height: 1.25em;
    margin-top: 3px;
}
.membername a {
    height: auto;
    display: inline;
}
/* My groups block */
#usergroupstable .roledisplay {
    font-weight: normal;
}
/* My pages / Latest pages block */
.viewlist .groupuserdate {
    margin: 3px 0;
}
.viewlist .tags {
    margin: 3px 0;
}
/* My plans block */
.plansblocktable .c1 {
    width: 100px;
}
.plansblocktable .c3 {
    width: 70px;
}
.plan_incomplete {
    background: #FEE7E7;
    color: #333333;
}
td.completed,
td.incomplete {
    text-align: center;
    padding-top: 4px;
}
/* Slideshow block */
.slideshow {
    text-align: center;
}
.slideshow table td {
    vertical-align: middle;
}
.slideshow table td a {
    display: block;
}
.slideshow .control {
    font-size: 3em;
    width: 20px;
    line-height: 90%;
}
.slideshow .control .disabled:hover,
.slideshow .control .disabled {
    color: #DDDDDD;
    cursor: default;
}
.slideshow .control span:hover {
    color: #888888;
    cursor: pointer;
}
/* Wall block */
.bt-wall form {
    margin: 0 0 10px 0;
}
.feedback_form_overlay {
    display: block;
    position: fixed;
    z-index: 1;
    width: 600px;
}

